Created network_preprocessing nb; Edited markov_clustering nb
Network preprocessing is where we will save our generated networks of interest.
Edited markov_clustering to read in the preprocessed networks instead of generating them.

--- a/notebooks/julian_o.ipynb
+++ b/notebooks/julian_o.ipynb
@@ -13,24 +13,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "# Autoreload modules without having to restart the notebook kernel.\n",
     "# hi bilbo\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "% load_ext autoreload\n",
+    "% autoreload 2\n",
     "\n",
     "\n",
     "# Plotting code stolen from Georg's notebook.\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "%matplotlib inline\n",
+    "% matplotlib inline\n",
     "font = {'family': 'DejaVu Sans',\n",
     "        'weight': 'bold',\n",
     "        'size': 32}\n",
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -59,18 +67,15 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "sys.path.insert(1, \"..\\\\\")\n",
     "\n",
-    "import random\n",
-    "\n",
     "#import markov_clustering as mcl\n",
-    "import networkx as nx\n",
     "\n",
     "# Personal libraries\n",
     "import lib.cluster\n",
-    "import lib.graph\n",
-    "import lib.plot\n",
-    "import lib.files"
+    "import lib.files\n",
+    "import lib.graph"
    ]
   },
   {
@@ -84,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -97,8 +102,40 @@
     "MCL_INFLATION = 2  # The parameter controlling Markov Clustering\n",
     "\n",
     "# ICP55's inviable neighbour.\n",
-    "YHC1 = '4932.YLR298C'\n"
+    "YHC1 = '4932.YLR298C'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "network = lib.graph.read_STRING()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "clusters = lib.cluster.read_csv(lib.files.make_filepath_to_mcl_clusters(\"icp55-cc-with-inviable-proteins.csv\"))\n",
+    "# Remove clusters of size lte 3 as is standard in the literature.\n",
+    "clusters = lib.cluster.remove_clusters_of_size_lte(clusters, 3)\n",
+    "# Make clusters into subgraphs\n",
+    "clusters = []"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
@@ -106,9 +143,9 @@
    "hash": "6466067c764c2694f1c40eca2655e6eecb7144d68186792bd40a1ffe2312ef24"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-8a1eea31",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (math3888)"
   },
   "language_info": {
    "codemirror_mode": {
