--- a/notebooks/network_preprocessing.ipynb
+++ b/notebooks/network_preprocessing.ipynb
@@ -2,20 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
    "source": [
     "# Meta"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "# Autoreload modules without having to restart the notebook kernel.\n",
     "% load_ext autoreload\n",
@@ -49,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Make the source directory available on all machines.\n",
@@ -58,8 +63,9 @@
     "# This must be executed before importing any files from the 'lib' module which exists in the src directory.\n",
     "sys.path.insert(1, \"..\\\\\")\n",
     "\n",
+    "import networkx as nx\n",
+    "\n",
     "# Personal libraries\n",
-    "import lib.cluster\n",
     "import lib.graph\n",
     "import lib.files"
    ],
@@ -76,18 +82,16 @@
     "# Constants"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "INFLATION = 2  # The parameter controlling Markov Clustering"
+    "ICP55 = '4932.YER078C'\n",
+    "THRESHOLD = 900"
    ],
    "metadata": {
     "collapsed": false,
@@ -99,57 +103,64 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Analysis\n",
+    "### ICP55 cc 900 inv\n",
+    "ICP55's largest connected component with edge threshold 900 and inviable proteins included."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "n0 = lib.graph.read_STRING()\n",
+    "n0 = lib.graph.remove_edges_below_threshold(n0, THRESHOLD)\n",
+    "n0 = lib.graph.remove_nodes_with_degree_lte(n0, 0)\n",
+    "n0 = lib.graph.get_largest_cc_with_node(n0, ICP55)\n",
+    "lib.graph.write_weighted_edgelist(n0, lib.files.make_filepath_to_networks('icp55-cc-900-inv.txt'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### ICP55 cc 900 noInv\n",
+    "ICP55's largest connected component with edge threshold 900 and invialbe proteins exlcuded."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "# Read in inviable_proteins as a list.\n",
+    "inviable_proteins = lib.graph.read_inviable_proteins(as_graph=False)\n",
     "\n",
-    "### ICP55 connected component with inviable proteins"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "lib.cluster.run_mcl_and_write_to_file(\n",
-    "    graph=lib.graph.read_edgelist(lib.files.make_filepath_to_networks('icp55-cc-900-inv.txt')),\n",
-    "    filepath=lib.files.make_filepath_to_mcl_clusters(\"icp55-cc-inviable.csv\"),\n",
-    "    inflation=INFLATION\n",
-    ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### ICP55 connected component no inviable proteins"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "lib.cluster.run_mcl_and_write_to_file(\n",
-    "    graph=lib.graph.read_edgelist(lib.files.make_filepath_to_networks('icp55-cc-900-noInv.txt')),\n",
-    "    filepath=lib.files.make_filepath_to_mcl_clusters(\"icp55-cc-inviable.csv\"),\n",
-    "    inflation=INFLATION\n",
-    ")"
+    "# Preprocess the network\n",
+    "n1 = lib.graph.read_STRING()\n",
+    "n1 = lib.graph.remove_edges_below_threshold(n1, THRESHOLD)\n",
+    "n1 = lib.graph.remove_nodes_from_list(n1, inviable_proteins)\n",
+    "n1 = lib.graph.remove_nodes_with_degree_lte(n1, 0)\n",
+    "n1 = lib.graph.get_largest_cc_with_node(n1, ICP55)\n",
+    "\n",
+    "# Write to file\n",
+    "lib.graph.write_weighted_edgelist(n1, lib.files.make_filepath_to_networks('icp55-cc-900-noInv.txt'))"
    ],
    "metadata": {
     "collapsed": false,
@@ -161,9 +172,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-8a1eea31",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (math3888)"
   },
   "language_info": {
    "codemirror_mode": {
