Added accuracy, sensitivity, ppv to lib.cluster

--- a/notebooks/julian_o.ipynb
+++ b/notebooks/julian_o.ipynb
@@ -13,32 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Line magic function `%` not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Autoreload modules without having to restart the notebook kernel.\n",
-    "# hi bilbo\n",
-    "% load_ext autoreload\n",
-    "% autoreload 2\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "\n",
     "# Plotting code stolen from Georg's notebook.\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "% matplotlib inline\n",
+    "%matplotlib inline\n",
     "font = {'family': 'DejaVu Sans',\n",
     "        'weight': 'bold',\n",
     "        'size': 32}\n",
@@ -58,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -89,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -97,20 +88,16 @@
    },
    "outputs": [],
    "source": [
-    "ICP55 = '4932.YER078C'\n",
-    "THRESHOLD = 900\n",
-    "MCL_INFLATION = 2  # The parameter controlling Markov Clustering\n",
-    "\n",
     "# ICP55's inviable neighbour.\n",
     "YHC1 = '4932.YLR298C'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
-    "network = lib.graph.read_STRING()"
+    "network = lib.graph.read_weighted_edgelist(lib.files.make_filepath_to_networks('icp55-cc-900-inv.txt'))"
    ],
    "metadata": {
     "collapsed": false,
@@ -121,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "clusters = lib.cluster.read_csv(lib.files.make_filepath_to_mcl_clusters(\"icp55-cc-with-inviable-proteins.csv\"))\n",
     "# Remove clusters of size lte 3 as is standard in the literature.\n",
     "clusters = lib.cluster.remove_clusters_of_size_lte(clusters, 3)\n",
     "# Make clusters into subgraphs\n",
-    "clusters = []"
+    "clusters = [network.subgraph(cluster) for cluster in clusters]"
    ],
    "metadata": {
     "collapsed": false,
