--- a/notebooks/julian_o.ipynb
+++ b/notebooks/julian_o.ipynb
@@ -13,13 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Autoreload modules without having to restart the notebook kernel.\n",
     "%load_ext autoreload\n",
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -107,15 +116,105 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# GARBAGE ZONE\n",
+    "\n",
+    "Nothing past here is clean or makes readable sense."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "clusters = lib.cluster.read_csv(lib.files.make_filepath_to_mcl_clusters(\"icp55-cc-with-inviable-proteins.csv\"))\n",
-    "# Remove clusters of size lte 3 as is standard in the literature.\n",
-    "clusters = lib.cluster.remove_clusters_of_size_lte(clusters, 3)\n",
-    "# Make clusters into subgraphs\n",
+    "clusters = sorted(clusters, key=len, reverse=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "clusters = clusters[:3]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "lib.cluster.write_to_file(lib.files.make_filepath_to_mcl_clusters(\"largest-3-for-nova.csv\"), clusters)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "import networkx as nx\n",
+    "network = lib.graph.read_weighted_edgelist(lib.files.make_filepath_to_networks('icp55-cc-900-inv.txt'))\n",
     "clusters = [network.subgraph(cluster) for cluster in clusters]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "betweeness_centralities = [nx.algorithms.centrality.betweenness_centrality(cluster) for cluster in clusters]\n",
+    "top_5 = []\n",
+    "\n",
+    "for i in range(3):\n",
+    "        cluster_centrality = betweeness_centralities[i].items()\n",
+    "        cluster_centrality = sorted(cluster_centrality, key=lambda x: x[1], reverse=True)\n",
+    "        top_5.append(cluster_centrality[:5])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "minimised_clusters = [[x[0] for x in y] for y in top_5]\n",
+    "lib.cluster.write_to_file(lib.files.make_filepath_to_clusters('top_5_of_largest_3_clusters.csv'), minimised_clusters)"
    ],
    "metadata": {
     "collapsed": false,
