--- a/notebooks/markov_clustering.ipynb
+++ b/notebooks/markov_clustering.ipynb
@@ -56,7 +56,7 @@
     "import sys\n",
     "\n",
     "# This must be executed before importing any files from the 'lib' module which exists in the src directory.\n",
-    "sys.path.insert(1, \"..\\\\\")\n",
+    "sys.path.insert(1, \"..\\\\..\\\\\")\n",
     "\n",
     "# Personal libraries\n",
     "import lib.cluster\n",
@@ -116,7 +116,7 @@
    "outputs": [],
    "source": [
     "lib.cluster.run_mcl_and_write_to_file(\n",
-    "    graph=lib.graph.read_edgelist(lib.files.make_filepath_to_networks('icp55-cc-900-inv.txt')),\n",
+    "    graph=lib.graph.read_weighted_edgelist(lib.files.make_filepath_to_networks('icp55-cc-900-inv.txt')),\n",
     "    filepath=lib.files.make_filepath_to_mcl_clusters(\"icp55-cc-inviable.csv\"),\n",
     "    inflation=INFLATION\n",
     ")"
@@ -161,9 +161,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-8a1eea31",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (math3888)"
   },
   "language_info": {
    "codemirror_mode": {
