--- a/notebooks/network_preprocessing.ipynb
+++ b/notebooks/network_preprocessing.ipynb
@@ -61,7 +61,7 @@
     "import sys\n",
     "\n",
     "# This must be executed before importing any files from the 'lib' module which exists in the src directory.\n",
-    "sys.path.insert(1, \"..\\\\\")\n",
+    "sys.path.insert(1, \"..\\\\..\\\\\")\n",
     "\n",
     "import networkx as nx\n",
     "\n",
